--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/todo1_store
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo1
 spring.datasource.username=postgres
 
 spring.datasource.password=global
